local-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
        - name: local-pvc-volume
          mountPath: /var/www/html
  volumes:
    - name: local-pvc-volume
      persistentVolumeClaim:
        claimName: local-pvc
