nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
spec:
  containers:
    - name: redis
      image: redis123
      command:
        - sleep
      args:
        - "5000"
      resources:
        limits:
          memory: 20Mi
          cpu: 2
        requests:
          memory: 15Mi
          cpu: 1
  nodeName: node01
  tolerations:
    - effect: NoSchedule
      key: spray
      value: mortein
      operator: Equal
