prac.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-1401
spec:
  containers:
    - name: secret-admin
      image: busybox
      command:
        - sleep
      args:
        - "4800"
      volumeMounts:
        - mountPath: /etc/secret-volume
          name: secret-volume
          readOnly: true
  volumes:
    - hostPath:
        path: /etc/secret-volume
        type: 
      name: webapp-volume
