static-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
spec:
  schedulerName: my-scheduler
  containers:
    - name: busybox
      image: busybox
      securityContext:
        runAsUser: 1010
        capabilities:
          add:
            - "SYS_TIME"
      command:
        - sleep 1000
