test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-08-30T14:58:17Z"
  generation: 1
  labels:
    app: web
  name: web
  namespace: default
  resourceVersion: "1014"
  uid: b2bb2049-d2ba-4313-b133-6cc458b49ba0
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
        - name: nginx 
          image: myprivateregistry.com:5000/nginx:alpine
          imagePullPolicy: IfNotPresent
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: private-reg-cred
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2024-08-30T14:58:20Z"
    lastUpdateTime: "2024-08-30T14:58:20Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-08-30T14:58:17Z"
    lastUpdateTime: "2024-08-30T14:58:20Z"
    message: ReplicaSet "web-758bd846c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
