volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: event-simulator
      image: kodekloud/event-simulator
      volumeMounts:
        - mountPath: /log
          name: webapp-volume
  volumes:
    - name: webapp-volume
      hostPath:
        path: /var/log/webapp
