CLusterIp-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: db
  name: redis-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    tier: db
  type: ClusterIp
status:
  loadBalancer: {}
